Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In member function 'void Key::Control(Ball*, int*, int)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:163:13: error: 'vy' was not declared in this scope
         if (vy >  25) vy =  25;  if (vx >  25) vx =  25;
             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:163:38: error: 'vx' was not declared in this scope
         if (vy >  25) vy =  25;  if (vx >  25) vx =  25;
                                      ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:164:13: error: 'vy' was not declared in this scope
         if (vy < -25) vy = -25;  if (vx < -25) vx = -25;   //ограничение на скорость движения
             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:164:38: error: 'vx' was not declared in this scope
         if (vy < -25) vy = -25;  if (vx < -25) vx = -25;   //ограничение на скорость движения
                                      ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: At global scope:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:125:6: warning: unused parameter 'dt' [-Wunused-parameter]
 void Key::Control(Ball* ball, int* F4_Col, int dt)
      ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:214:46: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
     double d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                              ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:227:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:241:43: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01;
                                           ^
---------------------------------------------------------------------------------------------
[20.06.2021 13:31:21,19 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
